--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
-  "version": "1.3.0",
-  "description": "Mern Demo",
+  "name": "eth-chart",
+  "version": "1.0.0",
+  "description": "An application that queries Binance for cryptocurrency data and visually ouputs the results.",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
