--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "ccxt": "^1.44.20",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "standard-version": "^9.1.1"
