--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "ccxt": "^1.44.20",
+    "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "react-chartjs-2": "^2.11.1",
     "standard-version": "^9.1.1"
   }
 }
