--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "react-chartjs-2": "^2.11.1",
+    "react-select": "^4.3.0",
     "standard-version": "^9.1.1"
   }
 }
