--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "if-env": "^1.0.4",
     "react-chartjs-2": "^2.11.1",
     "react-icons": "^4.2.0",
-    "react-select": "^4.3.0",
-    "standard-version": "^9.1.1"
+    "react-select": "^4.3.0"
   }
 }
