--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "ccxt": "^1.44.20",
     "chart.js": "^2.9.4",
     "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "^2.11.1",
     "react-icons": "^4.2.0",
     "react-select": "^4.3.0"
