--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^3.3.2",
+    "date-fns": "^2.22.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^4.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
