--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
-    "release": "standard-version"
+    "release": "standard-version",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^11.2.7",
+    "babel-jest": "^27.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.7"
+    "jest": "^27.0.3",
+    "nodemon": "^2.0.7",
+    "react-test-renderer": "^17.0.2"
   },
   "dependencies": {
     "axios": "^0.21.1",
