--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "mern-demo",
-  "version": "0.1.0",
+  "name": "cryptograph-client",
+  "version": "1.0.0",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "chart.js": "^3.3.2",
     "date-fns": "^2.22.1",
     "react": "^17.0.1",
@@ -20,8 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
