--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eth-chart",
+  "name": "cryptograph-server",
   "version": "1.0.0",
   "description": "An application that queries Binance for cryptocurrency data and visually ouputs the results.",
   "main": "server.js",
@@ -17,27 +17,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@testing-library/react": "^11.2.7",
-    "babel-jest": "^27.0.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "concurrently": "^5.3.0",
-    "jest": "^27.0.3",
-    "nodemon": "^2.0.7",
-    "react-test-renderer": "^17.0.2"
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
     "ccxt": "^1.44.20",
-    "chart.js": "^2.9.4",
-    "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "if-env": "^1.0.4",
-    "react-bootstrap": "^1.5.2",
-    "react-chartjs-2": "^2.11.1",
-    "react-icons": "^4.2.0",
-    "react-select": "^4.3.0"
+    "if-env": "^1.0.4"
   }
 }
