--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
-    "release": "standard-version",
-    "test": "jest"
+    "release": "standard-version"
   },
   "author": "",
   "license": "ISC",
