--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "babel-jest": "^27.0.2",
+    "bootstrap": "^4.6.0",
     "chart.js": "^3.3.2",
     "date-fns": "^2.22.1",
     "jest": "^27.0.3",
