--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.3.1",
     "ts-jest": "^27.0.2",
