--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.3.1",
+    "react-toggle": "^4.1.2",
     "ts-jest": "^27.0.2",
     "web-vitals": "^0.2.4"
   },
