--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "ccxt": "^1.44.20",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "typescript": "^4.3.5"
   }
 }
