--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "babel-jest": "^27.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.3.2",
