--- a/package.json
+++ b/package.json
@@ -16,15 +16,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react-select": "^4.0.17",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.3",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "ccxt": "^1.44.20",
     "dotenv": "^8.2.0",
