--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react-select": "^4.0.17",
+    "@types/react-toggle": "^4.0.3",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
   },
