--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/react-select": "^4.0.17",
     "@types/react-toggle": "^4.0.3",
     "concurrently": "^5.3.0",
