--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "animated-number-react": "^0.1.2",
     "babel-jest": "^27.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.3.2",
